# python-amazon-ad-api

./: .env  .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requeriments.txt  requirements.txt  setup.cfg  setup.py
.github/: FUNDING.yml  dependabot.yml
.github/workflows/: codeql-analysis.yml  dependabot-automerge.yml  main.yml  python-publish.yml
ad_api/api/: __init__.py  advertising_test_account.py  attribution.py  audiences.py  billing.py  brand_metrics.py  creative_assets.py  eligibility.py  exports.py  history.py  insights.py  invoices.py  localization.py  manager_accounts.py  marketing_stream.py  metadata.py  portfolios.py  portfolios_v3.py  profiles.py  recommendations.py  reports.py  stores.py  stream.py  validation_configurations.py
ad_api/auth/: access_token_client.py  credentials.py
ad_api/base/: __init__.py  api_response.py  base_client.py  client.py  config.py  credential_provider.py  exceptions.py  helpers.py  marketplaces.py  utils.py
docs/: Makefile  ad_api.api.sp.rst  api.rst  attribution.rst  code.rst  conf.py  config.rst  credentials.rst  disclaimer.rst  dsp.rst  endpoints.rst  env_variables.rst  example.py  exceptions.rst  index.rst  installation.rst  modules.rst  requeriments.txt  requirements.txt  responses.rst  sb.rst  sb_v3.rst  sb_v4.rst  sd.rst  sp.rst  sp_v2.rst  sp_v3.rst  support.rst  variables.rst
docs/api/: advertising_test_account.rst  attribution.rst  audiences.rst  billing.rst  brand_metrics.rst  creative_assets.rst  eligibility.rst  history.rst  insights.rst  invoices.rst  localization.rst  manager_accounts.rst  metadata.rst  portfolios.rst  portfoliosV3.rst  profiles.rst  recommendations.rst  reports.rst  validation_configurations.rst
docs/attribution/: advertisers.rst  attribution.rst  attribution_tags.rst  publishers.rst  reports.rst
docs/dsp/: reports.rst
docs/endpoints/: aplus_content.rst  authorization.rst  catalog.rst  catalog_items.rst  fba_inbound_eligibility.rst  fba_small_and_light.rst  feeds.rst  finances.rst  fulfillment_inbound.rst  fulfillment_outbound.rst  inventories.rst  listings_items.rst  merchant_fulfillment.rst  messaging.rst  notifications.rst  orders.rst  product_fees.rst  products.rst  (+19 more)
(+196 files in other folders)
