[metadata]
name = python-amazon-ad-api
version = 0.4.2
author = Daniel Alvaro
author_email = denisneuf@hotmail.com
description = Python wrapper for the Amazon Advertising API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/denisneuf/python-amazon-ad-api
project_urls =
    Bug Tracker = https://github.com/denisneuf/python-amazon-ad-api/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

