[metadata]
name = python-amazon-ad-api
version = 0.6.5
author = Daniel Alvaro
author_email = denisneuf@hotmail.com
description = Python wrapper for the Amazon Advertising API
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/denisneuf/python-amazon-ad-api
project_urls =
    Bug Tracker = https://github.com/denisneuf/python-amazon-ad-api/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[flake8]
max-line-length = 200
exclude =.git,__pycache__,docs/source/conf.py,build,dist,tests
ignore = I101,D100,D101,D102,D103,D104,D105,D107,D401,E203,I900,N802,N806,N812,W503,S311,S605,S607,ISC003,ISC001,T101,T000,F541,PL123
per-file-ignores = __init__.py:F401,F403

[mypy]
ignore_missing_imports = True
disallow_untyped_defs = True
check_untyped_defs = True
warn_redundant_casts = True
no_implicit_optional = True
strict_optional = True
